# py-test-data

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml
src/philiprehberger_test_data/: __init__.py
tests/: test_test_data.py
