[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-test-data"
version = "0.1.4"
description = "Generate realistic fake data for testing without external dependencies"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
keywords = ["test", "fake", "mock", "data", "fixture", "generator"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/philiprehberger/py-test-data#readme"
Repository = "https://github.com/philiprehberger/py-test-data"
Issues = "https://github.com/philiprehberger/py-test-data/issues"
Changelog = "https://github.com/philiprehberger/py-test-data/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_test_data"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
